# FindIt

./: .gitignore  README.md  pyproject.toml
configs/: datasets.yaml
data/: README.md
src/findit/: axes.py  dataset.py  doc_utils.py  evaluate.py  generate_tasks.py  prepare_datasets.py  promptloader.py
src/findit/plugin/models/: __init__.py  _interleave.py  gemma4.py  glm4v_nothink.py  openrouter.py  qwen3_5_nothink.py
src/findit/task_templates/: _default_template.yaml
subsets/: d3.parquet  flickr30k.parquet  hr_insdet_easy.parquet  hr_insdet_hard.parquet  iground.parquet  iground_multilabel.parquet  openimages.parquet  openimages_multilabel.parquet  pascal.parquet  pascal_multilabel.parquet  phrasecut.parquet  refcoco_g_test.parquet  refcoco_plus_testA.parquet  refcoco_plus_testB.parquet  refcoco_test.parquet  refcoco_testA.parquet  refcoco_testB.parquet  refl4.parquet  robotools.parquet  svg_relations.parquet
